logging_fungible/target/wasm32-unknown-unknown/release/build/tempfile-24ce78bf9ef87b99/stderr
error[E0433]: failed to resolve: could not find `fd` in `os`
 --> <anon>:1:27
  |
1 | pub trait Probe: std::os::fd::AsFd + Sized {}
  |                           ^^ could not find `fd` in `os`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
